spade-tests/src/snapshots/spade_tests__ast_lowering__good_error_message_on_empty_comptime_expression.snap
---
source: spade-tests/src/ast_lowering.rs
---
$config X = 0
fn a() -> bool {
    let _ = $if X == 1 {true};
    true
}


error: Missing expression
  ┌─ testinput:3:13
  │
3 │     let _ = $if X == 1 {true};
  │             ^^^^^^^^^^^^^^^^^
  │
  = help: The current comptime branch has no expression


